k8s/ui-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-nodeport
  namespace: retail-app
  labels:
    app: ui
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: ui
